--- a/src/app/pages/maliyet/buton-maliyet/buton-maliyet.component.html
+++ b/src/app/pages/maliyet/buton-maliyet/buton-maliyet.component.html
@@ -707,96 +707,89 @@
 
         <p-table id="row-check" [value]="iscilikGiderler" sortField="gorev.ad" sortMode="single" dataKey="gorev.ad" rowGroupMode="subheader" groupRowsBy="gorev.ad" [tableStyle]="{'min-width': '50rem'}" [style]="{'min-height':' 350px'}" [scrollable]="true"
         scrollHeight="350px" >
-        <ng-template pTemplate="header">
-            <tr>
-               
-                <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">
-                    İşçilik Giderleri
-                    <div class="button-container" style="position: absolute;right: 0;top: 0;">
-                        <div class="button-grup " style="gap: 3px !important;">
-                            <div class="img-container">
-                                <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/save.png"
-                                    alt="">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">
+                        İşçilik Giderleri
+                        <div class="button-container" style="position: absolute;right: 0;top: 0;">
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/save.png"
+                                        alt="">
+                                </div>
+
+                            </div>
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/add-file.png" alt="">
+                                </div>
+
+                            </div>
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/delete-file.png" alt="">
+                                </div>
+
+                            </div>
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/edit-file.png" alt="">
+                                </div>
+
+                            </div>
+
+
+
+                            <div class="button-grup " style="gap: 3px !important;">
+                                <div class="img-container">
+                                    <img style="width: 25px; height: 25px;"
+                                        src="../../../../../assets/icons/refresh.png" alt="">
+                                </div>
+
                             </div>
 
                         </div>
-                        <div class="button-grup " style="gap: 3px !important;">
-                            <div class="img-container">
-                                <img style="width: 25px; height: 25px;"
-                                    src="../../../../../assets/icons/add-file.png" alt="">
-                            </div>
-
-                        </div>
-
-                        <div class="button-grup " style="gap: 3px !important;">
-                            <div class="img-container">
-                                <img style="width: 25px; height: 25px;"
-                                    src="../../../../../assets/icons/delete-file.png" alt="">
-                            </div>
-
-                        </div>
-
-                        <div class="button-grup " style="gap: 3px !important;">
-                            <div class="img-container">
-                                <img style="width: 25px; height: 25px;"
-                                    src="../../../../../assets/icons/edit-file.png" alt="">
-                            </div>
-
-                        </div>
-
-
-
-                        <div class="button-grup " style="gap: 3px !important;">
-                            <div class="img-container">
-                                <img style="width: 25px; height: 25px;"
-                                    src="../../../../../assets/icons/refresh.png" alt="">
-                            </div>
-
-                        </div>
-
-                    </div>
-                </th>
-            </tr>
-            <tr>
-                <th style="font-size: 13px;">Ad</th>
-                <th style="font-size: 13px;">a=Miktar</th>
-                <th style="font-size: 13px;">Birim</th>
-                <th style="font-size: 13px;">b=Fiyat(TL)</th>
-                <th style="font-size: 13px;">c=axb=Malzeme Tutarı(TL)</th>
-            </tr>
-        </ng-template>
+                    </th>
+                </tr>
+                <tr>
+                    
+                    <th style="font-size: 13px;">Ad</th>
+                    <th style="font-size: 13px;"></th>
+                    <th style="font-size: 13px;"></th>
+                    <th style="font-size: 13px;"></th>
+                    <th style="font-size: 13px;"></th>
+                </tr>
+            </ng-template>
             <ng-template pTemplate="groupheader" let-customer let-rowIndex="rowIndex" let-expanded="expanded">
                 <tr>
-                    <td colspan="5">
+                    <td colspan="6">
                         <button [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2 " style="width: 30px ; height: 30px;">
-                            <!-- <i class="fa-solid fa-caret-up"></i> -->
                             <i class="fa-solid fa-caret-down"></i>
                         </button>
-                        <span class="font-bold ml-2">{{customer.gorev.ad}}</span>
+                        <span class="font-bold ml-2">{{customer.personel.gorev.ad}}</span>
                     </td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="groupfooter" let-customer>
                 <tr class="p-rowgroup-footer">
-                    <td colspan="5" style="text-align: right">Total Customers</td>
+                    <td colspan="6" style="text-align: right">Total Customers</td>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="rowexpansion" let-customer >
+            <ng-template pTemplate="rowexpansion" let-customer let-rowIndex="rowIndex">
                 <tr >
                     <td>
-                        {{customer.ad}}
+                        {{customer.personel.ad}}
                     </td>
                    
-                    <td>
-                        {{customer.miktar}}
-                    </td>
-                    <td>
-                        {{customer.birim}}
-                    </td>
-                    <td>
-                        {{customer.fiyat}}
-                    </td>
-                    <td>{{ customer.birimFiyat*customer.miktar }}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="footer">
